@startuml
skinparam classAttributeIconSize 0

package Storage {

class Storage {
  - filePath : String
  + save(children : List<Child>, elves : List<Elf>) : void
  + load() : StorageData
}

class StorageData {
  + children : List<Child>
  + elves : List<Elf>
}

class Child {
  - name : Name
  - gifts : ArrayList<Gift>
  - age : int
  - location : String
  - actions : ArrayList<String>
  - severities : ArrayList<Integer>

  + addGift(gift : Gift)
  + addAction(action : String, severity : int)
}

class Gift {
  - giftName : String
  - state : State

  + markPrepared()
  + markDelivered()
}

enum State {
  PREPARED
  IN_PROGRESS
  DELIVERED
}

class Elf {
  - name : Name
  - tasks : ArrayList<ElfTask>

  + addTask(task : ElfTask)
}

class ElfTask {
  - task : String
}

}

Storage ..> StorageData : <<create>>
Storage ..> Child : <<create>>
Storage ..> Gift : <<create>>
Storage ..> Elf : <<create>>
Storage ..> ElfTask : <<create>>


StorageData o-- "0..*" Child
StorageData o-- "0..*" Elf

Child *-- "0..*" Gift
Elf *-- "0..*" ElfTask

Gift --> State

@enduml